examples/test/testpolicy11712.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11712
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key5: value35
      key11: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value19
          key18: value7
          key33: value40
      podSelector:
        matchLabels:
          key22: value42
